--- a/main.html
+++ b/main.html
@@ -8,6 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+  <thead>
+       <tr>Part</tr>
+       <tr>XS</tr>
+       <tr>S</tr>
+       <tr>M</tr>
+       <tr>L</tr>
+       <tr>XL</tr>
+       <tr></tr>
+  </thead>
+
+
+
+
+		
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
